# chvarkov

./: .gitignore  AppRun  Cargo.toml  GEMINI.md  README.md  build.sh  com.example.ArchFinder.gschema.xml  com.example.chvarkov.gschema.xml  net.nocopypaste.chvarkov.gschema.xml  net.nocopypaste.chvarkov.yml
.github/workflows/: release.yml
compiled_schemas/: gschemas.compiled
data/: net.nocopypaste.chvarkov.desktop  net.nocopypaste.chvarkov.metainfo.xml
release/: chvarkov
src/: column.rs  icon_view.rs  list_view.rs  main.rs  preview.rs  sidebar.rs  utils.rs
xtask/src/: main.rs
