[workspace]
members = [".", "xtask"]
default-members = ["."]

[package]
name = "chvarkov"
version = "0.1.2"
edition = "2024"

[dependencies]
gio = "0.22.6"
glib = "0.22.7"
gtk4 = { version = "0.11.3", features = ["v4_10"] }
libadwaita = { version = "0.9.1", features = ["v1_6"] }
sourceview5 = "0.11.0"
